Bug 481178 - mozIStorageConnection createTable and tableExists should support attached databases. r=mak